created solution directory

--- a/app.html
+++ b/app.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     This is a set of five simulated EKG machines. Each machine connects to the central MQTT broker and sends an updated heartrate every five seconds.
+
+    <p> Your topic is: <span id="topicIDString"></span></p>
     <h1> Add Another Patient</h1>
     <button type="button" onclick="createPatient()">Add</button>
     <div id="patients">
