--- a/App/app.html
+++ b/App/app.html
@@ -7,7 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-    This is a set of five simulated EKG machines. Each machine connects to the central MQTT broker and sends an updated heartrate every five seconds.
+    This is a set of three simulated patients attached to EKG machines. Each machine connects to the central MQTT broker and sends an updated heart rate every five seconds.
+    You can add additional patients using the <span style="font-weight: bold;">Add</span> button.
 
     <p> Your topic is: <span id="topicIDString"></span></p>
     <h1> Add Another Patient</h1>
@@ -20,6 +21,8 @@
 
 
 </body>
-
+<!-- The config.js script is created automatically during the installation steps of this exercise in Installer.cls -->
+<!-- It contains a variable declaration for the topic string. -->
 <script src="config.js"></script>
 <script src="script.js"></script>
+<script src="broker.js"></script>
