--- a/App/app.html
+++ b/App/app.html
@@ -10,7 +10,7 @@
     This is a set of three simulated patients attached to EKG machines. Each machine connects to the central MQTT broker and sends an updated heart rate every five seconds.
     You can add additional patients using the <span style="font-weight: bold;">Add</span> button.
 
-    <p> Your topic is: <span id="SubscriptionString"></span></p>
+    <p> Your MQTT topic is: <span id="SubscriptionString"></span></p>
     <h1> Add Another Patient</h1>
     <button type="button" onclick="createPatient()">Add</button>
     <div id="patients">
